# svca-lab-genesis

./: .coverage  .env.example  .gitignore  .verify_passed  AUTHOR_METADATA.json  CONTAINER_DIGEST.md  COREBDAYmulti.txt  EVIDENCE_NOTE.md  LAB_POLICY.md  PROJECT_SUMMARY.md  README.md  SEPOLIA_RESULT.json  Structural_Persistence_Certification.md  ZENODO_RESULT.json  build.sh  build_artifact.py  hf_deploy.py  lab_setup.sh  pyproject.toml  requirements.txt  sepolia_register.py  svca-lab-architecture.md  verify.sh  zenodo_deposit.py
artifact/: genesis_fca22fc3076fdf22.json  ledger.json
contracts/: OhashRegistry.sol
experiments/: 01_omega_seed_demo.py  02_adaptive_hardware_pipeline.py
genesis/: methodology.md  ohash.json  seed_anchor.py
reproducibility/: source_hashes.txt
src/algebra/: __init__.py  adaptive_omega.py  omega_gate.py  psi_state.py  sigma_rules.py
src/fuzzy_extractor/: __init__.py  bch_helper.py  fuzzy_extractor.py
src/genesis/: __init__.py  genesis_artifact.py  triple_anchor.py
src/ohash/: __init__.py  ohash.py
src/puf/: __init__.py  optical_puf.py  puf_base.py  rp2040_bridge.py  simulated_puf.py  sram_puf.py
src/svca_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_algebra.py  test_puf.py
